--- a/style.css
+++ b/style.css
@@ -42,3 +42,24 @@ body {
     background-color: rgb(233, 209, 74);
     cursor: pointer;
 }
+
+footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;   
+    height: 80px;
+    width: 100%;
+    color: white;
+    text-align: left;
+    padding-left: 10px;
+    font-family: serif;
+}
+
+a {
+    color:white;
+}
+
+a:hover {
+    color:rgb(233, 209, 74);;
+}
